--- a/webportal/template/homepage/homepagesections/textsection.html
+++ b/webportal/template/homepage/homepagesections/textsection.html
@@ -17,8 +17,8 @@
 </div>
 <div class="homepage-section-preview" id="homepage-section-preview-<%=s as.ID %>">
     
-    <div class="homepage-section-preview-header" id="header-<%=s as.ID %>">Header: <%=s as.Header %></div>
-    <div class="homepage-section-preview-content" id="content-<%=s as.ID %>">Content: <%=s as.Content %></div>
+    <div class="homepage-section-preview-header" id="header-<%=s as.ID %>"><%=s as.Header %></div>
+    <div class="homepage-section-preview-content" id="content-<%=s as.ID %>"><%=s as.Content %></div>
     
 </div>
 
