--- a/webportal/content/edithomepage.css
+++ b/webportal/content/edithomepage.css
@@ -47,3 +47,91 @@
     width: 100px;
     height: 100px;
 }
+
+.tags-info {
+    display: none;
+}
+
+.choose-tag-modal {
+    visibility: hidden;
+    width: 300px;
+    height: 400px;
+    overflow-y: scroll;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    background-color: #333333;
+}
+
+.modal-tag {
+    width: 50px;
+    height: 50px;
+    box-sizing: border-box;
+}
+
+.modal-tag img {
+    width: 100%;
+    height: 100%;
+}
+
+.modal-tag:hover {
+    border: 2px solid #fbc23f;
+    cursor: pointer;
+}
+
+
+
+.stack-section-tag-image {
+    vertical-align: top;
+    width: 40px;
+    height: 40px;
+}
+
+.tag-section-tags {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: flex-start;
+}
+
+.tag-container {
+    vertical-align: top;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    width: 35px;
+}
+
+.tag-x {
+    position: relative;
+    top: -30px;
+    left: 5px;
+}
+
+.tag-section-name-container {
+    width: 200px;
+}
+
+label {
+    /* font-family: "Bangers", "cursive";
+    font-size: 20px; */
+    color: #fbc23f;
+    margin-right: 10px;
+}
+
+input {
+    background-color: #26021d;
+    color: #fbc23f;
+    border: none;
+    height: 22px;
+    font-size: 18px;
+}
+
+.chart {
+    height: 300px;
+}
