--- a/webportal/template/admin/editusers/editusers.html
+++ b/webportal/template/admin/editusers/editusers.html
@@ -1,4 +1,4 @@
-<%: func HandleEditUsers(users []models.User, w io.Writer)%>
+<%: func HandleEditUsers(settings models.Settings, users []models.User, w io.Writer)%>
 <%~ "index.html" %>
 <%@ body { %>
     <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
