--- a/webportal/template/tag/edittag.html
+++ b/webportal/template/tag/edittag.html
@@ -1,4 +1,4 @@
-<%: func HandleEditTag(tags []models.Tag, w io.Writer)%>
+<%: func HandleEditTag(settings models.Settings, tags []models.Tag, w io.Writer)%>
 <%~ "index.html" %>
 <%@ body { %>
     <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
@@ -7,7 +7,8 @@
     <script src="/content/js/edittag.js"></script>
 
     <div class="editor-container">
-        <form id="form1" action="/tag/edit" enctype="multipart/form-data" method="POST">
+        <div class="main-form-container"></div>
+        <form id="form1" action="/tags/edit" enctype="multipart/form-data" method="POST">
             <div class="input-container">
                 <label for="SelectedTag" class="editor-label">Choose a post:</label>
                 <select name="SelectedTag" id="chosen-tag" class="editor-select">
@@ -39,7 +40,7 @@
             </div>
             <div class="label-container">
                 <div class="editor-label">Thumbnail stretched: </div>
-                <select name="ThumbnailStretched" id="tag-thumbnailstretched" class="text" >
+                <select name="ThumbnailStretched" id="tag-thumbnailstretched"  class="editor-select" >
                     <option id="tag-thumbnailstretched-option-true" value="true">True</option>
                     <option id="tag-thumbnailstretched-option-false" value="false">False</option>
                 </select>
@@ -53,6 +54,7 @@
                 <button class="submit-btn" type="submit" name="Send" value="DELETE">Delete</button>
             </div>
         </form>
+        </div>
     </div>
 
     <script>
